I think that would be all

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^11.2.1",
     "express": "^4.15.4",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "uws": "^8.14.1"
   }
 }
